--- a/Task2/Gallery.html
+++ b/Task2/Gallery.html
@@ -8,27 +8,27 @@
 <body>
 <div class="back">
     <div class="right-col">
-        <img class="img" src="guitar.jpg"/>
-        <p class="textimg">Pixabay</p>
+        <img class="img" src="img\guitar.jpg"/>
+        <div class="textimg">Pixabay</div>
     </div>
     <div class="right-col">
-        <img class="img" src="guitar.jpg"/>
+        <img class="img" src="img\guitar.jpg"/>
         <div class="textimg">Девушка с гитарой </div>
     </div>
     <div class="right-col">
-        <img class="img" src="guitar.jpg"/>
+        <img class="img" src="img\guitar.jpg"/>
         <div class="textimg">Девушка с гитарой</div>
     </div>
     <div class="right-col">
-        <img class="img" src="sky.jpg"/>
+        <img class="img" src="img\sky.jpg"/>
         <div class="textimg">Девушка с гитарой </div>
     </div>
     <div class="right-col">
-        <img class="img" src="sky.jpg"/>
-        <div class="textimg">Девушка с гитарой прекрасно выглядит </div>
+        <img class="img" src="img\sky.jpg"/>
+        <div class="textimg">Девушка с гитарой прекрасно выглядит и отлично играет</div>
     </div>
     <div class="right-col">
-        <img class="img" src="guitar.jpg"/>
+        <img class="img" src="img\guitar.jpg"/>
         <div class="textimg">Девушка с гитарой </div>
     </div>
 </div>
