--- a/Task2/Gallery.html
+++ b/Task2/Gallery.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <div class="back">
+    <div class="title">
+        Галлерея
+    </div>
     <div class="right-col">
         <img class="img" src="img\guitar.jpg"/>
         <div class="textimg">Pixabay</div>
