--- a/Task2/Gallery.html
+++ b/Task2/Gallery.html
@@ -12,27 +12,27 @@
     </div>
     <div class="right-col">
         <img class="img" src="img\guitar.jpg"/>
-        <div class="textimg">Pixabay</div>
+        <p class="textimg">Pixabay</p>
     </div>
     <div class="right-col">
         <img class="img" src="img\guitar.jpg"/>
-        <div class="textimg">Девушка с гитарой </div>
+        <p class="textimg">Девушка с гитарой </p>
     </div>
     <div class="right-col">
         <img class="img" src="img\guitar.jpg"/>
-        <div class="textimg">Девушка с гитарой</div>
+        <p class="textimg">Девушка с гитарой</p>
     </div>
     <div class="right-col">
         <img class="img" src="img\sky.jpg"/>
-        <div class="textimg">Девушка с гитарой </div>
+        <p class="textimg">Девушка с гитарой </p>
     </div>
     <div class="right-col">
         <img class="img" src="img\sky.jpg"/>
-        <div class="textimg">Девушка с гитарой прекрасно выглядит и отлично играет</div>
+        <p class="textimg">Девушка с гитарой прекрасно выглядит и отлично играет</p>
     </div>
     <div class="right-col">
         <img class="img" src="img\guitar.jpg"/>
-        <div class="textimg">Девушка с гитарой </div>
+        <p class="textimg">Девушка с гитарой </p>
     </div>
 </div>
 </body>
