--- a/Task2/Gallery.html
+++ b/Task2/Gallery.html
@@ -7,8 +7,81 @@
 </head>
 <body>
 <div class="back">
-    <div class="title">
+    <h2 class="title">
         Галлерея
+    </h2>
+    <hr>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Pixabay</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\sky.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\sky.jpg"/>
+        <p class="textimg">Девушка с гитарой прекрасно выглядит и отлично играет</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Pixabay</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\sky.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\sky.jpg"/>
+        <p class="textimg">Девушка с гитарой прекрасно выглядит и отлично играет</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Pixabay</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\sky.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\sky.jpg"/>
+        <p class="textimg">Девушка с гитарой прекрасно выглядит и отлично играет</p>
+    </div>
+    <div class="right-col">
+        <img class="img" src="img\guitar.jpg"/>
+        <p class="textimg">Девушка с гитарой </p>
     </div>
     <div class="right-col">
         <img class="img" src="img\guitar.jpg"/>
